Small correction (paragraph was missing)
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@629 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/doc/user_manual.tex
+++ b/doc/user_manual.tex
@@ -571,10 +571,14 @@ Setting your own size could produce some curious results (here the biggest possi
 \caption{Huge !}
 \end{figure}
 
+\paragraph{Animation speed}
+
 There's a setting called "Animation speed" which is used by the animated screenies.\newline
 If you increment this value, the animation will run faster.\newline
 A visual feedback will show you the effect of increasing this value.\newline
 The max is set to 100.\newline
+
+\paragraph{Foreground and background colors}
 
 Below the "animation speed" there's 2 color chooser which allow you to set your own colors for foreground and background colors (as you know z80 calc LCD is monochrome).\newline
 The grayscales screenies are fully compatible with this setting of course (because it's no more than "flashing").\newline
@@ -593,6 +597,8 @@ Let's see a bunch of colored screenies:\newline
 \end{figure}
 
 Of course these settings are usually used to correct contrast or simply set a better color ratio (not to do the useless but funny screenshots I've shown just before).\newline
+
+\paragraph{Grayscale}
 
 A last setting called "Grayscale" let you choose the rendering mode.\newline
 %%%% Benjamin could you talk about grayscale checkbox here %%%
